fixtures/src/invalid/content-style-position-absolute/OEBPS/chapter1.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head><title>Chapter 1</title></head>
<body>
  <h1>Chapter 1</h1>
  <div style="position:absolute; top:0; left:0;">
    <p>Absolutely positioned content.</p>
  </div>
</body>
</html>